[package]
name = "cs2_server_blocker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"
